--- a/services/notes-api/serverless.yml
+++ b/services/notes-api/serverless.yml
@@ -13,7 +13,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   stage: dev
-  region: us-east-1
+  region: eu-west-1
   tracing:
     apiGateway: true
     lambda: true
