--- a/services/notify-job/serverless.yml
+++ b/services/notify-job/serverless.yml
@@ -12,7 +12,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   stage: dev
-  region: us-east-1
+  region: eu-west-1
   environment:
     stage: ${self:custom.stage}
     resourcesStage: ${self:custom.resourcesStage}
