Revert "Updated Import Value"
This reverts commit 213eca4a6d8fe70d7445c6327cb522a2e5bc3f04.

--- a/services/notify-job/serverless.yml
+++ b/services/notify-job/serverless.yml
@@ -31,5 +31,5 @@ functions:
     handler: notify.main
     events:
       - sns:
-        'Fn::ImportValue': ExtNotePurchasedTopicArn
+        'Fn::ImportValue': ExtNotePurchasedTopicArn-${self:custom.stage}
 
