--- a/services/notify-job/serverless.yml
+++ b/services/notify-job/serverless.yml
@@ -31,4 +31,5 @@ functions:
     handler: notify.main
     events:
       - sns:
-        arn: arn:aws:sns:eu-west-1:466775288839:note-purchased-dev
+        'Fn::ImportValue': ExtNotePurchasedTopicArn-${self:custom.stage}
+
